[tool.poetry]
name = "vizzly"
version = "0.1.0"
description = "Sign dashboard and data access tokens for vizzly.co"
authors = ["James Bowers <james@vizzly.co>"]
readme = "README.md"
packages = [{include = "vizzly"}]

[tool.poetry.dependencies]
python = "^3"
PyJWT = {extras = ["crypto"], version = "^2.8.0"}
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
